force-app/main/default/objects/Campaign/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 3</fullName>
            </value>
            <value>
                <fullName>Type 4</fullName>
            </value>
            <value>
                <fullName>Type 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>