force-app/main/default/objects/Campaign/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>