force-app/main/default/objects/Campaign/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Location 1</fullName>
            </value>
            <value>
                <fullName>Location 2</fullName>
            </value>
            <value>
                <fullName>Location 3</fullName>
            </value>
            <value>
                <fullName>Location 4</fullName>
            </value>
            <value>
                <fullName>Location 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>