force-app/main/default/objects/Campaign/fields/Event_Venue__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue__c</fullName>
    <label>Event Venue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>