force-app/main/default/objects/Campaign/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>