force-app/main/default/objects/Campaign/recordTypes/Innovation_Hub_Event.recordType-meta.xml
<RecordType>
    <fullName>Innovation_Hub_Event</fullName>
    <active>true</active>
    <description>Events associated with your Innovation Hub</description>
    <label>Innovation Hub Event</label>
</RecordType>